fixed overflowing mail content

--- a/max1/gmail/css/gmail.css
+++ b/max1/gmail/css/gmail.css
@@ -1,4 +1,4 @@
-@import "../../reset.css";
+@import "../../../html_codding/reset.css";
 
 body {
   overflow: hidden;
@@ -157,33 +157,6 @@ button {
   border-bottom: 1px solid lightgray;
 }
 
-.mails .mails-list table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
-  background-color: transparent;
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-
-.mails .mails-list table thead tr td {
-  border-top: 0;
-  vertical-align: bottom;
-  border-bottom: 2px solid #ddd;
-  background-color: transparent;
-  padding: 8px;
-  line-height: 1.42857143;
-  text-align: left;
-}
-
-.mails .mails-list table tbody td {
-  padding: 8px;
-  line-height: 1.42857143;
-  background-color: transparent;
-  vertical-align: top;
-  border-top: 1px solid #ddd;
-}
-
 .mails {
   position: absolute;
   top: 105px;
@@ -191,19 +164,25 @@ button {
   right: 20px;
   left: 170px;
   background-color: transparent;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .mails footer {
-  margin-top: 10px;
   text-align: center;
+  margin-bottom: 55px;
+  padding-top: 10px;
 }
 
 .mails .mails-list {
-  position: relative;
+  position: absolute;
+  top: 35px;
+  bottom: 0;
   background: transparent;
-  border-top: 1px solid lightgray;
-  overflow: hidden;
+  /*border-top: 1px solid lightgray;*/
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .tab-control {
@@ -285,7 +264,8 @@ button {
   right: 0;
   width: 100px;
   height: 30px;
-  max-height: 30px
+  max-height: 30px;
+  padding-right: 5px;
 }
 .div-letter .checkbox-wrapper{
   background: none;
@@ -295,4 +275,12 @@ button {
 
 .controls .checkbox-wrapper{
   padding: 6px 25px !important;
+}
+.mails .tab-wrapper{
+  padding: 6px 25px !important;
+  background: lightgray;
+}
+.mails .tab-wrapper:hover{
+  border: 1px solid #d3d3d3;
+  background: #f5f5f5;
 }
